# well-known-ecosystem

./: .gitignore  AGENTIC.scm  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.adoc  Containerfile  ECOSYSTEM.scm  MAINTAINERS.adoc  META.scm  Mustfile  NEUROSYM.scm  PALIMPSEST.adoc  PLAYBOOK.scm  README.adoc  ROADMAP.adoc  RSR_COMPLIANCE.adoc  SECURITY.md  STATE.scm  flake.nix  guix.scm  justfile  well-known-ecosystem_README.md
.github/: dependabot.yml
.github/workflows/: codeql.yml  jekyll-gh-pages.yml  mirror.yml  npm-bun-blocker.yml  quality.yml  rsr-antipattern.yml  scorecard-enforcer.yml  scorecard.yml  secret-scanner.yml  validator.yml  wellknown-enforcement.yml  workflow-linter.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
.well-known/: dc.xml  security.txt
contracts/: CONTRACT.scm  REGISTRY.scm  VALIDATION-RULES.scm
docs/: CITATIONS.adoc
examples/.well-known/: ai.txt  apple-app-site-association  assetlinks.json  humans.txt  security.txt
hooks/: validate-codeql.sh  validate-permissions.sh  validate-sha-pins.sh  validate-spdx.sh
kith/: CHANGELOG.adoc  Justfile  LICENSE  LICENSE-PALIMPSEST.txt  README.adoc  TESTING-REPORT.adoc  TESTING-REPORT.scm  b~main.adb  justfile  kith.gpr
kith/docs/: CITATIONS.adoc
templates/: README.adoc
templates/caddy/: Caddyfile  Caddyfile.snippet
templates/deno-fresh/: well_known_middleware.ts  well_known_plugin.ts
templates/docker/: Dockerfile  (+2 more)
validator/: Cargo.toml  README.adoc
validator/src/: contract.rs  main.rs  registry.rs  rules.rs  validators.rs
(+43 files in other folders)
